--- a/Lesson06-Visualizer-Preferences/T06.04-Exercise-UseResources/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.04-Exercise-UseResources/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <!-- - - - - - - - - - - - - - - -
           - Used by Preferences  -
           - - - - - - - - - - - - - - - -->
-    <!-- TODO (1) Add Strings for checkbox preference -->
+    <!-- Completed (1) Add Strings for checkbox preference -->
+    <string name="pref_show_bass_key" translatable="false">show_bass</string>
 
     <!-- Value in SharedPreferences for red color option -->
     <string name="pref_color_red_value" translatable="false">red</string>
@@ -16,4 +17,7 @@
 
     <!-- Value in SharedPreferences for green color option -->
     <string name="pref_color_green_value" translatable="false">green</string>
+    <string name="pref_show_bass_summary_off">Hidden</string>
+    <string name="pref_show_bass_summary_on">Shown</string>
+    <string name="pref_show_bass_titile">Show Bass</string>
 </resources>
